# bd-os

./: .env  .gitignore  README.md  convert-icon.ps1  create-shortcut.ps1  custom-ca.pem  export-certs.ps1  index.html  package-lock.json  package.json  tailwind.config.js  verify-client.js  verify-models.js  vite.config.ts
db/: schema.sql
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src/application/: ThemeContext.tsx  interfaces.ts
src/domain/: entities.ts  enums.ts
src/infrastructure/: db.ts  repositories.ts  schema_definitions.ts  tauri-sql.ts
src/infrastructure/ai/: geminiService.ts
src/infrastructure/mock/: data.ts  protemoi_data.ts  repositories.ts
src/services/: authService.ts  graphService.ts
src/ui/: Layout.tsx
src/ui/components/: AdminTaskBar.tsx  CalendarWidget.tsx  EvaluationModal.tsx  FixedTooltip.tsx  MITModal.tsx  Modal.tsx  OneLearning.tsx  OutlookConnect.tsx  SettingsModal.tsx  TaskCompletionModal.tsx
src/ui/hooks/: useGlobalSearch.ts
src/ui/icons/: Icons.tsx
src/ui/screens/: ContactList.tsx  Dashboard.tsx  MeetingCalendar.tsx  MeetingPrep.tsx  OpportunityBoard.tsx  ProtemoiBoard.tsx  Tracker.tsx
src/utils/: dateUtils.ts  learningIngestion.ts
